<resources>
    <string name="app_name">U3T2ImplicitIntents</string>
    <string name="et_uri">https://developer.android.com</string>
    <string name="bt_open_uri">Open Website</string>
    <string name="et_location">Pont Fernando Reig</string>
    <string name="bt_open_location">Open Location</string>
    <string name="et_text">This is the text I wanna share</string>
    <string name="bt_share_text">Share This Text</string>
    <string name="text_zoom">ZoomMaps</string>
    <string name="more_intents">MoreIntents</string>
    <string name="nota_sujeto">Sujeto de la Nota</string>
    <string name="nota_texto">Texto de la Nota</string>
    <string name="bt_nota">Guardar Nota</string>
    <string name="texto_Temporizador">Nombre Temporizador</string>
    <string name="numero_Temporizador">Numero Temporizador</string>
    <string name="bt_Temporizador">Guardar Temporizador</string>
    <string name="numero_llamar">Numero a llamar</string>
    <string name="bt_llamar">Llamar</string>

</resources>